[package]
name = "cli-grid"
version = "0.1.0"
authors = ["Mahdi Shojaei <mehdishojaei81@gmail.com>"]
edition = "2018"
description = "A small and dependency free crate for formatting the terminal outputs in a column based grid style."
license = "MIT OR Apache-2.0"
keywords = ["terminal", "cli", "grid", "column", "table"]
categories = ["command-line-interface"]
repository = "https://github.com/mehdishojaei/cli-grid"

[dependencies]
